--- a/navbar.html
+++ b/navbar.html
@@ -35,10 +35,10 @@
         <div>Reebok
         </div>
         <div>
-            <div>Men</div>
+            <div><a href="mens.html">Men</a></div>
             <div>Women</div>
-            <div>Login</div>
-            <div>Signup</div>
+            <div><a href="login.html">Login</a></div>
+            <div><a href="signup.html">Signup</a></div>
         </div>
     </div>
 </body>
